# prest

./: .codeclimate.yml  .deepsource.toml  .dockerignore  .env.example  .gitignore  .gitmodules  .goreleaser.yml  .kodiak.toml  .sourcelevel.yml  .travis.yml  BUILD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREATING_MODULES.md  Dockerfile  Dockerfile.noplugins  DockerfileGoReleaser  Gopkg.toml  LICENSE  MAINTAINERS  Makefile  README.md  WORKSPACE  adapter.go  config.go  config.toml  config_test.go  create.go  databases.go  databases_test.go  deploy.sh  deps.bzl  doc.go  docker-compose-prod.yml  docker-compose-test.yml  docker-compose.yml  feature_user_permission.md  funcregistry.go  funcregistry_test.go  go.mod  (+20 more)
.claude/: CLAUDE.md  MULTI_ADAPTER_GUIDE.md
.devcontainer/: Dockerfile  bashrc  devcontainer.json  docker-compose.yml  entrypoint.sh  prest.toml
.github/: FUNDING.yml  ci-coverage-comments.md  copilot-instructions.md  dependabot.yml  issue_template.md  pull_request_template.md
adapters/: BUILD.bazel  README.md  adapter.go  adapter_test.go  catalog.go  connection.go  database_registry.go  go.mod  go.sum  permissions.go  query_executor.go  query_registry.go  readiness.go  registry.go  request_query.go  scanner.go  scripts.go  sql_builder.go
adapters/mock/: BUILD.bazel  README.md  conn.go  doc.go  mock.go  mock_test.go
adapters/postgres/: BUILD.bazel  adapter.go  connection.go  errors.go  otel.go  otel_test.go  postgres.go  postgres_conn_test.go  postgres_exec_test.go  postgres_test.go  queries.go  queries_test.go  query_import_test.go  query_registry.go  query_registry_test.go  safe_expression_test.go  scanner.go  script_permissions.go  script_permissions_test.go  script_runner.go  script_verbs.go  test_exports.go  utils_test.go  vector.go  vector_test.go
adapters/postgres/connection/: conn.go  conn_test.go
adapters/postgres/formatters/: BUILD.bazel  formatters.go  formatters_test.go
adapters/postgres/internal/connection/: BUILD.bazel  conn.go  conn_test.go  multidb.go  multidb_test.go  otel_hooks_test.go  test_exports.go
adapters/postgres/internal/scanner/: scanner.go  scanner_test.go
adapters/postgres/statements/: BUILD.bazel  queries.go
adapters/scanner/: BUILD.bazel  scanner.go  scanner_test.go
api/: request.go
app/: app.go  app_test.go  errors.go  schema.go  schema_test.go  test_helpers_test.go
cache/: buntdb.go  buntdb_test.go  cache.go  cache_test.go
cmd/: BUILD.bazel  auth.go  create.go  down.go  go.mod  go.sum  goto.go  migrate.go  mversion.go  next.go  queries.go  redo.go  reset.go  root.go  root_test.go  root_utils.go  test.http  up.go  version.go
cmd/prestd/: go.mod  go.sum  main.go  prest.toml
cmd/prestd/exts/: README.md  hello.go  helloc.c  helloc.h
config/: BUILD.bazel  README.md  auth_test.go  cache.go  config.go  config_test.go  database_registry.go  database_registry_test.go  go.mod  go.sum  middlewares.go  middlewares_test.go  multidb.go  multidb_bdd_test.go  multidb_test.go  otel.go  otel_test.go  queries.go  queries_test.go  routers.go  routers_test.go
config/middlewares/: middlewares.go  middlewares_test.go
config/router/: BUILD.bazel  routers.go  routers_test.go
config/testdata/: prest.toml
content/: _index.en.md  _index.md  index.md
context/: keys.go
controllers/: BUILD.bazel  README.md  adapter_helper.go  auth.go  auth_test.go  catalog.go  catalog_test.go  catalog_unit_test.go  config.go  crud.go  crud_test.go  crud_unit_test.go  databases.go  databases_test.go  deps.go  deps_test.go  errors.go  errors_test.go  generic.go  generic_test.go  go.mod  go.sum  handlers_test.go  health_db.go  healthcheck.go  healthcheck_mock_test.go  healthcheck_test.go  helpers.go  helpers_test.go  json.go  mcp.go  mcp_otel_test.go  mcp_test.go  plugins.go  plugins_test.go  query_registry.go  query_registry_test.go  routes.go  schemas.go  schemas_test.go  (+12 more)
controllers/auth/: BUILD.bazel  models.go
controllers/mockgen/: server.go
controllers/mocks/: healthcheck.go
controllers/testdata/: prest.toml  schema.sh  schema.sql
dbtime/: BUILD.bazel  LICENSE  README.md  dbtime.go  dbtime_test.go  go.mod
docs/: 404.html  LICENSE  README.md  _index.en.md  _index.md  case-studies.md  index.html  index.xml  netlify.toml  sitemap.xml
etc/: entrypoint.sh
handlerstest/: deps.go
helpers/: BUILD.bazel  errorhandler.go  go.mod  prest.go
helpertest/: conntest.go
install-manifests/: README.md
middlewares/: BUILD.bazel  README.md  access_control_test.go  adapter_selector.go  adapter_selector_test.go  cache.go  cache_test.go  config.go  config_test.go  config_testhooks.go  crud_stack.go  crud_stack_test.go  go.mod  go.sum  middlewares.go  middlewares_test.go  query_stack.go  query_stack_test.go  script_perms.go  test_exports.go  utils.go  utils_test.go
middlewares/statements/: BUILD.bazel  permissions.go
middlewares/testdata/: schema.sh
mock/: mock.go  mock_test.go
modules/: base.go
plugins/: handler.go  handler_test.go  loader.go  middleware.go  middleware_test.go  plugins.go  plugins_test.go
postgres/: connection.go  postgres.go  postgres_test.go  queries.go  queries_test.go
router/: config.go  otel_test.go  router.go  router_test.go  routers_test.go
samples/: README.md  prest.sample.toml  prest_first_look.postman_collection.json
scripts/: docker-beta.sh  docker-gh-tag.sh  docker-hub-tag.sh  documation-build.sh  documentation-build.sh  releaser-latest.sh  releaser-tag.sh
statements/: queries.go  statements.go
studio/: .env.example  .gitignore  .prettierignore  .prettierrc.json  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
telemetry/: fanout.go  fanout_test.go  otel.go  otel_test.go
template/: BUILD.bazel  README.md  funcregistry.go  funcregistry_test.go  go.mod
template/testdata/: prest.toml  schema.sh  schema.sql
testdata/: Dockerfile  databases.toml  db-init.sh  docker-compose.yml  migrations_test.sh  prest.json  prest.toml  prest_expose.toml  prest_multicluster.toml  prest_multidb.toml  prest_queries.toml  (+3 more)
(+332 files in other folders)
