load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/prest/prest/config",
    visibility = ["//visibility:public"],
    deps = [
        "//adapters",
        "@com_github_mitchellh_go_homedir//:go-homedir",
        "@com_github_nuveo_log//:log",
        "@com_github_spf13_viper//:viper",
    ],
)

go_test(
    name = "config_test",
    srcs = ["config_test.go"],
    data = glob(["testdata/**"]),
    embed = [":config"],
)
