load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "controllers",
    srcs = [
        "auth.go",
        "databases.go",
        "schemas.go",
        "sql.go",
        "tables.go",
    ],
    importpath = "github.com/prest/prest/controllers",
    visibility = ["//visibility:public"],
    deps = [
        "//adapters",
        "//config",
        "//controllers/auth",
        "@com_github_form3tech_oss_jwt_go//:jwt-go",
        "@com_github_gorilla_mux//:mux",
    ],
)

go_test(
    name = "controllers_test",
    srcs = [
        "auth_test.go",
        "databases_test.go",
        "schemas_test.go",
        "sql_test.go",
        "tables_test.go",
        "utils_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":controllers"],
    deps = [
        "//adapters/postgres",
        "//config",
        "//config/router",
        "//middlewares",
        "@com_github_gorilla_mux//:mux",
    ],
)
