load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "template",
    srcs = ["funcregistry.go"],
    importpath = "github.com/prest/prest/template",
    visibility = ["//visibility:public"],
)

go_test(
    name = "template_test",
    srcs = ["funcregistry_test.go"],
    data = glob(["testdata/**"]),
    embed = [":template"],
)
