load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "postgres",
    srcs = [
        "connection.go",
        "postgres.go",
        "queries.go",
    ],
    importpath = "github.com/prest/prest/adapters/postgres",
    visibility = ["//visibility:public"],
    deps = [
        "//adapters",
        "//adapters/postgres/formatters",
        "//adapters/postgres/internal/connection",
        "//adapters/postgres/statements",
        "//adapters/scanner",
        "//config",
        "//template",
        "@com_github_jmoiron_sqlx//:sqlx",
        "@com_github_lib_pq//:pq",
        "@com_github_nuveo_log//:log",
    ],
)

go_test(
    name = "postgres_test",
    srcs = [
        "postgres_test.go",
        "queries_test.go",
        "utils_test.go",
    ],
    embed = [":postgres"],
    deps = [
        "//adapters",
        "//adapters/postgres/internal/connection",
        "//adapters/postgres/statements",
        "//config",
        "@com_github_nuveo_log//:log",
    ],
)
