load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "scanner",
    srcs = ["scanner.go"],
    importpath = "github.com/prest/prest/adapters/scanner",
    visibility = ["//visibility:public"],
    deps = ["@com_github_nuveo_log//:log"],
)

go_test(
    name = "scanner_test",
    srcs = ["scanner_test.go"],
    embed = [":scanner"],
)
