load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "formatters",
    srcs = ["formatters.go"],
    importpath = "github.com/prest/prest/adapters/postgres/formatters",
    visibility = ["//visibility:public"],
)

go_test(
    name = "formatters_test",
    srcs = ["formatters_test.go"],
    embed = [":formatters"],
)
